<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_lidar</name>
  <version>0.0.1</version>
  <description>Perception stack with the LiDAR</description>
  <maintainer email="mmcvicker@crimson.ua.edu">mason</maintainer>
  <maintainer email="ambakr@crimson.ua.edu">abakr</maintainer>
  <license>Just Internal LOL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> Can't find comperable version -->

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <!-- <build_type>ament_cmake</build_type> Not sure if this is necessary can't find comperable version in ros1-->
  </export>
</package>
